--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
 
     <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
-    <link href=//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oxygen:400,700' rel='stylesheet' type='text/css'>
+    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oxygen:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
